--- a/server/public/index.html
+++ b/server/public/index.html
@@ -14,5 +14,9 @@
         <input type="text" id="taskIn" placeholder="Add Task">
 <button id="addTaskButton">Add Task</button>
     </div>
+    <div id="outputDiv">
+        <ul id="tasksOut"
+        ></ul>
+    </div>
 </body>
 </html>
