--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="vendors/jquery-3.6.0.min.js"></script>
     <script src="scripts/client.js"></script>
+    <link rel="stylesheet" href="styles/style.css">
     <title>To-Do List </title>
 </head>
 <body>
@@ -15,8 +16,14 @@
 <button id="addTaskButton">Add Task</button>
     </div>
     <div id="outputDiv">
-        <ul id="tasksOut"
-        ></ul>
+        <table id="tasksOut">
+            <thead>Items To-Do</thead>
+
+            <tbody>
+                
+            </tbody>
+    
+    </table>
     </div>
 </body>
 </html>
